# flight-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
domains/flight-hal-interfaces/: .buckconfig  .gitignore  BUCK  CMakeLists.txt  LICENSE  README.md  README_BUCK2.md  dependencies.yaml  project.json
domains/flight-hal-interfaces/benchmarks/: CMakeLists.txt
domains/flight-hal-interfaces/benchmarks/cross_platform/: CMakeLists.txt
domains/flight-hal-interfaces/benchmarks/driver_switching/: CMakeLists.txt
domains/flight-hal-interfaces/benchmarks/hal_interface_benchmarks/: CMakeLists.txt  memory_benchmark_suite.cpp  standalone_memory_benchmark.cpp
domains/flight-hal-interfaces/benchmarks/interface_overhead/: CMakeLists.txt
domains/flight-hal-interfaces/benchmarks/memory_allocation/: CMakeLists.txt
domains/flight-hal-interfaces/benchmarks/regression_detection/: CMakeLists.txt  performance_regression_detector.hpp
domains/flight-hal-interfaces/benchmarks/reporting/: CMakeLists.txt
domains/flight-hal-interfaces/cmake/: Buck2Compatibility.cmake  CompilerWarnings.cmake  Dependencies.cmake  FlightHALConfig.cmake.in  Sanitizers.cmake  StaticAnalysis.cmake  TestingConfig.cmake
domains/flight-hal-interfaces/docs/: audio_interface_design.md  buck2_migration_strategy.md  buck2_setup_guide.md  capability_detection_system.md  configuration_interface_design.md  error_handling_system.md  event_system_design.md  file_interface_design.md  graphics_interface_design.md  hal_troubleshooting_guide.md  hal_validation_tools_guide.md  input_interface_design.md  integration_guidelines.md  interface_compliance_testing_framework.md  memory_interface_design.md  migration_guide.md  network_interface_design.md  performance_benchmarking_system.md  performance_monitoring_system.md  platform_detection_system.md  platform_interface_design.md  resource_management_system.md  stress_testing_system.md  thread_interface_design.md  time_interface_design.md
domains/flight-hal-interfaces/docs/api/: index.md
domains/flight-hal-interfaces/docs/architecture/: README.md  enhanced_hal_architecture.md  flight_hal_architecture_guide.md
domains/flight-hal-interfaces/examples/: CMakeLists.txt
domains/flight-hal-interfaces/examples/audio_management/: comprehensive_audio_example.cpp
domains/flight-hal-interfaces/examples/basic_hal_usage/: CMakeLists.txt  enhanced_hal_example.cpp
domains/flight-hal-interfaces/examples/capability_detection/: comprehensive_capability_detection_example.cpp
domains/flight-hal-interfaces/examples/configuration_management/: comprehensive_config_example.cpp
domains/flight-hal-interfaces/examples/cross_platform_app/: CMakeLists.txt
domains/flight-hal-interfaces/examples/custom_driver/: CMakeLists.txt
domains/flight-hal-interfaces/examples/driver_registration/: advanced_registration_example.cpp
domains/flight-hal-interfaces/examples/drivers/: mock_audio_driver.hpp  (+7 more)
domains/flight-hal-interfaces/tests/: BUCK  CMakeLists.txt
domains/flight-hal-interfaces/tools/: CMakeLists.txt
domains/flight-hal-macos-integration/: CMakeLists.txt  README.md  project.json
domains/flight-hal-macos-integration/examples/: CMakeLists.txt  basic_usage.cpp  performance_benchmark.cpp
domains/flight-hal-macos-integration/src/: core_foundation_bridge.cpp  development_tools.cpp  file_system_bridge.cpp  foundation_bridge.mm  platform_coordinator.cpp  platform_detector.cpp  platform_detector.mm  process_manager.cpp
domains/flight-hal-macos-integration/tests/: CMakeLists.txt  main.cpp
domains/flight-shared-types/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  dependencies.yaml  oras-config.yaml  project.json
domains/flight-shared-types/bindings/: README.md
domains/flight-shared-types/buck2/: BUCK
domains/flight-shared-types/docs/: README.md  authentication-types-integration-guide.md  complete-language-bindings-summary.md  error-types-integration-guide.md  flight-core-integration-validation-guide.md  go-integration.md  oras-publishing-plan.md  oras-publishing-verification-report.md  platform-types-integration-guide.md  realtime-types-integration-guide.md  session-types-integration-guide.md  typescript-integration.md  v6r-integration-guide.md
domains/flight-shared-types/tests/: README.md
domains/flight-shared-types/tools/: generate-bindings.sh  generate-cpp17-bindings.sh  generate-enhanced-bindings.sh  publish-platform-matrix.sh  publish-wasm-artifacts.sh  run-flight-core-validation.sh  run-integration-tests.sh  test-oras-publishing.sh  test-session-types.sh  test-validation.sh  validate-all-bindings.sh  validate-wit.sh
domains/flight-shared-types/wit/: authentication.wit  component.wit  error.wit  memory-types.wit  pagination.wit  platform.wit  realtime.wit  session.wit
domains/flight-shared-types/wit-processor/: Cargo.toml
modules/flight-component/: CMakeLists.txt  README.md
modules/flight-component/benchmarks/: CMakeLists.txt
modules/flight-core-memory/: CMakeLists.txt  README.md
modules/flight-core-runtime/: CMakeLists.txt  README.md
modules/flight-core-wasm/: CMakeLists.txt  README.md
modules/flight-core-wasm/benchmarks/: CMakeLists.txt
modules/flight-core-wasm/tests/: CMakeLists.txt
modules/flight-hal/: CMakeLists.txt  README.md
modules/flight-hal/benchmarks/: CMakeLists.txt
modules/flight-memory/: CMakeLists.txt  README.md
modules/flight-memory/benchmarks/: CMakeLists.txt
modules/flight-runtime/: CMakeLists.txt  README.md
modules/flight-runtime/benchmarks/: CMakeLists.txt
modules/flight-telemetry/: CMakeLists.txt  README.md
modules/flight-telemetry/benchmarks/: CMakeLists.txt
modules/flight-wasm/: CMakeLists.txt  CMakePresets.json  README.md  test_headers.cpp
modules/flight-wasm/benchmarks/: CMakeLists.txt  README.md  benchmark_main.cpp
modules/flight-wasm/build-benchmarks/: DartConfiguration.tcl  benchmark_results.json
modules/flight-wasm/build-test/: DartConfiguration.tcl  flight-wasm-config.cmake
modules/flight-wasm/docs/: type-conversion-system.md
modules/flight-wasm/tests/: CMakeLists.txt  test_main.cpp
(+593 files in other folders)
