[workspace]
members = [
    "validation/memory",
    "validation/platform", 
    "validation/error",
    "validation/session",
    "validation/component",
    "wit-processor"
]

[workspace.dependencies]
wit-bindgen = "0.15"
wasmtime = "15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/flight/flight"
